Fix menu bullet alignment.

--- a/src/assets/scss/_local-linkages.scss
+++ b/src/assets/scss/_local-linkages.scss
@@ -224,7 +224,7 @@ article h4 {
     list-style-type: square;
     list-style-position: inside;
     width: 100%;
-    text-indent: 1.5em;
+    text-indent: 1em;
 }
 
 .sidebar .menu li:not(:last-child) {
